# xr_to_opentrack_rs

./: Cargo.toml  build.rs
resources/: PKGBUILD  xr_to_opentrack.service
src/: euler.rs  ftok_ipc.rs  hotplug.rs  imu_data.rs  imu_reader.rs  main.rs  open_track_data.rs  source.php  viture.rs  viture_sys.rs
src/hotplug/: mod.rs  viture_hotplug.rs
src/viture/: mod.rs  viture_rs.rs  viture_sys.rs
viture_one_linux_sdk_1.0.7/: .gitignore  README
viture_one_linux_sdk_1.0.7/sample/: CMakeLists.txt  README
viture_one_linux_sdk_1.0.7/sample/src/: main.c
