[package]
name = "xr_to_opentrack_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
async-std = { version = "1.13.0", features = ["attributes"] }
clap = { version = "4.5.27", features = ["derive"] }
clap_derive = "4.5.24"
futures = { version = "0.3.31", features = ["thread-pool"] }
rusb = "0.9.4"
