[package]
name = "xr_to_opentrack_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.27", features = ["derive"] }
clap_derive = "4.5.24"
ring-channel = { version = "0.12.0", features = ["std"], default-features = false }
rusb = "0.9.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
